--- a/_layouts/cps.html
+++ b/_layouts/cps.html
@@ -8,8 +8,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     </head>
-  <body class="default">
+  <body class="sub-page cps-page">
     <header class="page-header" role="banner">
+      <a title="Github Repository" class="top-icon github-logo" href="https://github.com/gulsahcakir/CPS"></a>
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
     </header>
