Fixing the layout

--- a/_layouts/cps.html
+++ b/_layouts/cps.html
@@ -10,7 +10,9 @@
     </head>
   <body class="sub-page cps-page">
     <header class="page-header" role="banner">
-      <a title="Github Repository" class="top-icon github-logo" href="https://github.com/gulsahcakir/CPS"></a>
+      <div class="top-btn-container"> 
+        <a title="Github Repository" class="top-icon github-logo" href="https://github.com/gulsahcakir/CPS"></a>
+      </div>
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
     </header>
