--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,6 @@
 ---
 
 @import "{{ site.theme }}";
-@import "sf-pro.css";
-@import "./tile.css";
 
 img {
   // border: 1px solid black;
@@ -22,11 +20,6 @@ img {
 .default > .page-header {
   color: white;
   padding: 1.5rem 6rem;
-}
-
-.sub-page.cps-page > header {
-  background-color: #111b1e;
-  background-image: unset;
 }
 
 .page-header .project-tagline {
@@ -81,8 +74,7 @@ a.top-icon:hover {
   border: 1.5px solid white;
 }
 
-a.top-icon,
-.footer-icon {
+a.top-icon {
   position: relative;
   width: 3.25rem;
   background-size: 80%;
@@ -96,65 +88,8 @@ a.top-icon,
   z-index: 10;
 }
 
-.footer-icon {
-  margin: 0px;
-  width: 2.5rem;
-  height: 2.5rem;
-  background-size: 70%;
-}
-
-.contact-container > a {
-  cursor: pointer;
-  padding: 0px 15px 0px 10px;
-  margin: 0px 5px;
-  line-height: 2.5rem;
-  display: inline-flex;
-  vertical-align: middle;
-  align-items: center;
-  border-radius: 50px;
-  background: #0066d6;
-  color: white;
-}
-
-.contact-container > a:hover {
-  transform: scale(1.05);
-  text-decoration: unset;
-  background: #0251a7;
-  color: #ffffff;
-  transition: 70ms ease-out;
-  border: none;
-}
-
-.contact-container > a:hover .footer-icon.gmail {
-  background-image: url(/img/gmail-logo-filled.png);
-}
-
-.contact-container > a:hover .footer-icon.linkedin {
-  background-image: url(/img/ln-logo-filled.png);
-}
-
-.contact-container > a:hover .footer-icon.github-logo-bordered {
-  background-image: url(/img/gh-logo-filled.png);
-}
-
-.gmail {
-  background-image: url(/img/gmail-logo-bordered.png);
-}
-
-.linkedin {
-  background-image: url(/img/ln-logo-bordered.png);
-}
-
-a.homepage {
-  background-image: url("/img/home-white.png");
-}
-
 .github-logo {
   background-image: url(/img/gh-logo-filled.png);
-}
-
-.github-logo-bordered {
-  background-image: url(/img/gh-logo-bordered.png);
 }
 
 .top-icon.github-logo {
@@ -166,23 +101,8 @@ body {
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-footer.page-footer {
-  position: relative;
-  bottom: 10px;
-  display: block;
-  width: 100%;
-  text-align: center;
-  // border-top: 1px solid #797979;
-  width: 98%;
-  margin: 0px 1%;
-}
-
 .main-content li {
   line-height: 35px;
-}
-
-.main-content ul {
-  list-style: none;
 }
 
 @media screen and (max-width: 64em) and (min-width: 42em) {
@@ -208,44 +128,5 @@ footer.page-footer {
 @media screen and (max-width: 42em) {
   .sub-page.cps-page > .page-header {
     padding: 2rem 1rem;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .contact-container a {
-    display: inline-flex;
-    padding: 0px 7.5px 0px 5px;
-    margin: 0px 2.5px;
-    line-height: 1.25rem;
-    font-size: 10px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .contact-container div {
-    width: 1.25rem;
-    height: 1.25rem;
-  }
-}
-
-@keyframes banner-gradient {
-  0% {
-    background-position: 0 50%;
-  }
-
-  25% {
-    background-position: 40% 0;
-  }
-
-  50% {
-    background-position: 50% 70%;
-  }
-
-  75% {
-    background-position: 100% 40%;
-  }
-
-  100% {
-    background-position: 0 50%;
   }
 }
